[package]
name = "bevy_pixel_buffer"
version = "0.1.1"
edition = "2021"
authors = ["Francisco J. Sánchez <zheoni@outlook.es>"]
description = "A library to draw pixels in bevy"
license = "MIT"
keywords = ["bevy", "2D", "framebuffer", "pixels", "gamedev"]
categories = ["graphics", "rendering", "game-development"]
repository = "https://github.com/Zheoni/bevy_pixel_buffer"
readme = "README.md"

[package.metadata.docs.rs]
features = ["bevy/x11"]
all-features = true

[features]
default = ["rayon", "rand"]
egui = ["dep:bevy_egui"]
rayon = ["dep:rayon"]
rand = ["dep:rand"]

[dependencies]
bevy_egui = { version = "0.15", optional = true }
bytemuck = { version = "1.10", features = ["derive"] }
log = "0.4"
rand = {version = "0.8", optional = true }
rayon = { version = "1.5", optional = true }
thiserror = "1.0"

[dependencies.bevy]
version = "0.8"
default-features = false
features = [
    "bevy_render",
    "bevy_sprite",
    "bevy_asset",
    "bevy_core_pipeline"
]

[dev-dependencies.bevy]
version = "0.8"
default-features = false
features = [
    "x11",
    "bevy_winit",
]

[[example]]
name = "multiple_buffers"
required-features = ["egui"]

[[example]]
name = "mandelbrot_set"
required-features = ["egui"]

[[example]]
name = "mandelbrot_set_cpu"
required-features = ["egui"]

[[example]]
name = "basic_egui"
required-features = ["egui"]

[[example]]
name = "fill_egui"
required-features = ["egui"]